[package]
name = "strata-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
strata-core = { package = "strata-core", path = "../core" }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
crossbeam-skiplist = { workspace = true }
crc32fast = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
parking_lot = { workspace = true, features = ["arc_lock"] }
arc-swap = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
