[package]
name = "strata-vector"
version = "0.6.1"
edition = "2021"
description = "Vector similarity search engine for StrataDB"

[dependencies]
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
strata-storage = { path = "../storage" }
strata-durability = { path = "../durability" }
strata-concurrency = { path = "../concurrency" }
dashmap = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }
rmp-serde = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
fs2 = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
