[package]
name = "strata-vector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Vector similarity search engine for StrataDB"
publish = false

[lints]
workspace = true

[dependencies]
strata-core = { package = "strata-core-legacy", path = "../core-legacy" }
strata-engine = { path = "../engine" }
strata-storage = { path = "../storage" }
dashmap = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }
rmp-serde = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "vector_benchmarks"
harness = false
